<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:id="@+id/nav_headless"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kitty_cat_cover"
        android:scaleType="centerCrop"
        android:src="@drawable/nav_cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:gravity="bottom|start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|start"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f44336"
                android:text="@string/nav_login"
                android:textColor="#ffebee" />

            <Button
                android:id="@+id/btn_register"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2196F3"
                android:text="@string/nav_register"
                android:textColor="#E3F2FD" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>