<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--  Book Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edtBookName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Author Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/edtAuthorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edtAuthorName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Description Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height ="wrap_content"
                android:hint="@string/hint_edtDescription" />
        </android.support.design.widget.TextInputLayout>
        <!-- RouteBA Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/edtType"
                android:layout_width="match_parent"
                android:layout_height ="wrap_content"
                android:hint="@string/hint_edtType" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Chọn hình" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_height="150dp"
                android:layout_width="200dp"
                app:srcCompat="@drawable/default_image" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnAddRoute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="Tiếp tục" />
    </LinearLayout>
</ScrollView>